# Fable2AssetBrowser

./: Contributing  README.md  ReadMe
source/: BNKExplorer.spec  CMakeLists.txt  Fable2Cli.exe.config  bnk_audio.py  bnk_core.py  bnk_reader.py  bnk_ui.py  bnk_ui.spec  build.py  convert.py  fable.rc  imgui.ini
source/Archive/: audio.py  bnk_ui.py  convert.py
source/Archive/010EditorScripts/: mdl parser.bt  mdl_parser.bt
source/WIP/: Beetle_Basic.mdl  CH_HeroAccess_BallroomMask_F.mdl  ChickenBlack.glb  ChickenBlack.mdl  DLC_BloodHound.mdl  assembly_decomp(for reference).txt  brightwood_earth_04_merged.tex  brightwood_earth_04_merged_mip2_32x32.dds  brightwood_earth_04_merged_mip3_16x16.dds  brightwood_earth_04_merged_mip4_8x8.dds  brightwood_earth_04_merged_mip5_4x4.dds  brightwood_earth_04_merged_mip6_4x4.dds  brightwood_earth_04_merged_mip7_4x4.dds  convert.py  glb conversion (DON'T DELETE!).py  glb_with_weights.py  gltf.py  inspect_tex.py  lhdecompress.py  lzx.py  mdl_glb_conv.py  test(donotedit).py  test2.py  texparser.py
source/WIP/blender/: glb_with_weights.py  mdl_importer ver 2.py  mdl_importer.py
source/anim_wip/: fable2_parse_results.json  fable2_parser.py
source/include/image/: Fable2_WAV_decode.bat
source/src/: BNKCore.cpp  BNKReader.cpp  BNK_UI.cpp  CMakeLists.txt  HexView.cpp  HexView.h  ModelParser.cpp  ModelParser.h  ModelPreview.cpp  ModelPreview.h  Progress.cpp  Progress.h  TexParser.cpp  TexParser.h  UI_Main.cpp  UI_Main.h  UI_Panels.cpp  UI_Panels.h  audio.cpp  files.cpp  files.h  main.cpp  mdl_converter.cpp  mdl_converter.h  operations.cpp  operations.h  play_audio.cpp  play_audio.h  state.cpp  state.h  utils.cpp  utils.h
